# Arrow-oficial

./: .env.example  .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
docs/: ARQUITETURA.md  CHANGELOG.md  FILOSOFIA.md  SUPABASE_WEB_LOCKS_DEADLOCK_FIX.md  THEME_SYSTEM_GUIDE.md  UPDATER.md  WINDOWS.md
docs/source/: AppLayout.tsx  StarfieldBackground.tsx
shared/: vault-types.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  updater.pub
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  ai_context.rs  ai_personal.rs  ai_tools.rs  app_state.rs  commands.rs  db.rs  lib.rs  main.rs  note_links.rs  notes.rs  paths.rs  schema.sql  types.rs  vault.rs
src/contexts/: AuthContext.tsx  DesktopContextMenuContext.tsx  FocusTimerContext.tsx  NotesChromeContext.tsx  RainSoundContext.tsx  SidebarContext.tsx  ThemeContext.tsx  VaultContext.tsx  VisualQualityContext.tsx
src/hooks/: useAI.ts  useAISettings.ts  useAmbientSound.ts  useCycles.ts  useDailyCheckin.ts  useDailyPlan.ts  useGoals.ts  useHabits.ts  useHideOnScroll.ts  useMediaLists.ts  useNoteNavigation.ts  useNoteNavigationHistory.ts  useNotes.ts  useNotification.ts  usePlatformChrome.ts  useReleaseSchedules.ts  useTasks.ts  useTimeBlocks.ts  useTransactions.ts  useVision.ts  useWeeklyPlan.ts  useWeeklyScores.ts  useWorkoutDashboardStats.ts  useWorkouts.ts
src/lib/: ai-constants.ts  ai-types.ts  app-updater.ts  appearance-constants.ts  desktop-api.ts  desktop-context-menu-pages.ts  list-themes.ts  platform.ts  pomodoro-presets.ts  pomodoro-sessions.ts  pomodoro-stats.ts  release-schedule-themes.ts  supabase-config.ts  task-pomodoro.ts  task-views.ts  theme-migration.ts  time-blocks.ts  workout-config.ts
src/pages/: Analysis.tsx  Assistant.tsx  Auth.tsx  Cycles.tsx  Dashboard.tsx  Finances.tsx  GoalDetail.tsx  Goals.tsx  (+11 more)
supabase/: config.toml
(+92 files in other folders)
