[package]
name = "arrow"
version = "0.5.0"
description = "Arrow — produtividade pessoal, método 12 Semanas"
authors = ["Arrow"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "arrow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.6.3", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
window-vibrancy = "0.5"
uuid = { version = "1", features = ["v4"] }
