[package]
name = "arrow"
version = "0.5.1"
description = "Arrow — produtividade pessoal, método 12 Semanas"
authors = ["Arrow"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "arrow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Keep the Tauri core portable. The macOS-private-api feature is only needed
# for platform-specific native window behavior and prevents a clean Windows
# build configuration.
tauri = { version = "2.6.3", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
window-vibrancy = "0.5"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tauri-plugin-process = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Dwm"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
